# oocr-training-dynamics

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: README.md
docs/development/: correctness.md  testing.md  token-weight-performance.md  token-weight-runtime-20260721.json
docs/experiments/: activation-patching.md  design.md
docs/onboarding/: getting-started.md  glossary.md  workflows.md
docs/operations/: gpu-runbook.md  storage-plan.md
docs/pipelines/: experiment-lifecycle.md
docs/reference/: architecture.md  configuration.md  file-reference.md
docs/research/: preregistration.md
oocr_training_dynamics/: __init__.py  analysis.py  artifacts.py  contracts.py  data.py  gpu_guard.py  metrics.py  models.py  patching.py  planning.py  runtime_evaluation.py  runtime_models.py  runtime_patching.py  runtime_training.py  semantics.py  tokenization.py
scripts/: analyze_results.py  benchmark_token_weight_runtime.py  export_site.py  plan_batch_size_ablation.py  plan_experiments.py  plan_lora_rank_ablation.py  run_batch_size_sweep.py  run_evaluation.py  run_lora_rank_sweep.py  run_patching.py  run_patching_matrix.py  run_training.py  validate_tokenizers.py
site/: app.js  index.html  styles.css
site/data/: experiment.json  patch-manifest.json
site/data/patches/olmo3-7b/correct/attention_input/across_sample/recipient_step_001024/: donor_step_001024.json
site/data/patches/olmo3-7b/correct/attention_output/across_sample/recipient_step_001024/: donor_step_001024.json
site/data/patches/olmo3-7b/correct/block_weights/across_time/recipient_step_000001/: donor_step_000000.json
site/data/patches/olmo3-7b/correct/block_weights/across_time/recipient_step_000002/: donor_step_000000.json
site/data/patches/olmo3-7b/correct/block_weights/across_time/recipient_step_000004/: donor_step_000000.json  donor_step_000001.json
site/data/patches/olmo3-7b/correct/block_weights/across_time/recipient_step_000008/: donor_step_000000.json  donor_step_000002.json  donor_step_000004.json
tests/: test_analysis.py  test_artifacts.py  test_contracts.py  test_data.py  test_gpu_guard.py  test_metrics.py  test_models_and_planning.py  test_patching.py  test_runtime_patching_interfaces.py  test_semantics.py  test_site_export.py  test_token_weight_benchmark.py  test_tokenization.py
(+369 files in other folders)
